added snap and flatpak list
